# Iran-Israel-Conflict-Trajectory-240326

./: README.md
code_snapshot/: pyproject.toml
code_snapshot/geopol/: __init__.py  base_context.py  cli.py  config.py  llm.py  pipeline.py  schemas.py
code_snapshot/geopol/actors/: __init__.py  roster.py
code_snapshot/geopol/council/: __init__.py  lenses.py  protocol.py
code_snapshot/geopol/news/: fresh_data.py  rss.py  tavily.py
code_snapshot/geopol/render/: __init__.py  pdf.py  typst.py
code_snapshot/geopol/simulation/: __init__.py  engine.py
report/: 00-isw-analysis.md  00-news-headlines.md  01-ground-truth.md  02-sitrep.json  03-forecasts.json  04-summary.json  report.typ
